<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".RentalMain">

    <Button
        android:id="@+id/btnCam"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/bordernormal"
        android:text="@string/addbycamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bordernormal"
        android:text="@string/addbygallery"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCam"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtRentalName"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bordernormal"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ownername"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_bgjanith"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRentalEmail" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_bgjanith"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnShow"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_bgjanith"
        android:text="Show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEdit" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_bgjanith"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <EditText
        android:id="@+id/txtRentalVNo"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordernormal"
        android:ems="10"
        android:hint="@string/vehicleno"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRentalName" />

    <EditText
        android:id="@+id/txtRentalDes"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordernormal"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRentalVNo" />

    <EditText
        android:id="@+id/txtRentalEmail"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordernormal"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRentalCon" />

    <EditText
        android:id="@+id/txtRentalCon"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordernormal"
        android:ems="10"
        android:hint="@string/contact"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRentalDes" />

    <ImageButton
        android:id="@+id/MRentalback"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:background="#0021FF"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="129dp"
        android:layout_height="110dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bordernormal"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/btnGall"
        app:layout_constraintStart_toEndOf="@+id/btnCam"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/bordernormal"
        android:ems="10"
        android:fadeScrollbars="true"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="203dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/managerentaldetails"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/MRentalback"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="85dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="190dp"
        android:background="@drawable/bordernormal"
        android:text="@string/vehicletype"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>