<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book"
    android:backgroundTint="#FFFAFA"
    tools:context=".CustomRental">

    <fragment
        android:id="@+id/fragView"
        android:name="rob.sample.authenticatorapp.BikeFragment"
        android:layout_width="match_parent"
        android:layout_height="622dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:scaleX="2.836"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kuma"
        tools:layout_editor_absoluteX="28dp" />

    <Button
        android:id="@+id/btnVan"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="#F57F17"
        android:onClick="Fragment"
        android:text="@string/van"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBike"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCar"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="#797FBD"
        android:onClick="Fragment"
        android:text="@string/car"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBike"
        app:layout_constraintEnd_toStartOf="@+id/btnBicycle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBike" />

    <Button
        android:id="@+id/btnBike"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="#19B89D"
        android:onClick="Fragment"
        android:text="@string/bike"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBicycle"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="#F8D62B"
        android:onClick="Fragment"
        android:text="@string/bicycle"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBike"
        app:layout_constraintEnd_toStartOf="@+id/btnVan"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="203dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:alpha="0.7"
        android:text="@string/customrental"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>